# osu-renderer

./: LICENSE  README.md  pyproject.toml  usage_example.ipynb
assets/sample_beatmap/: None - Test Beatmap (osu!) [Normal].osu
src/osu_renderer/: __init__.py  renderer.py
